<?xml version="1.0"?>
<package format="2">
  <name>exotica</name>
  <version>4.0.0</version>
  <description>The Extensible Optimization Toolset (EXOTica) is a library for defining problems for robot motion planning.</description>

  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <maintainer email="yiming.yang@ed.ac.uk">Yiming Yang</maintainer>
  <maintainer email="wolfgang.merkt@ed.ac.uk">Wolfgang Merkt</maintainer>
  <author email="mcamnadur@gmail.com">Michael Camilleri</author>
  <author email="wolfgang.merkt@ed.ac.uk">Wolfgang Merkt</author>

  <license>BSD</license>

  <url type="website">https://github.com/ipab-slmc/exotica</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>tf</depend>
  <depend>kdl_parser</depend>
  <depend>pluginlib</depend>
  <depend>eigen_conversions</depend>
  <depend>tf_conversions</depend>
</package>
