<?xml version="1.0"?>
<package format="3">
  <name>exotica</name>
  <version>6.0.1</version>
  <description>The Extensible Optimization Toolset (EXOTica) is a library for defining problems for robot motion planning. This package serves similar to a metapackage and contains dependencies onto all core-released exotica packages. It also builds the documentation.</description>

  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <maintainer email="wolfgang@robots.ox.ac.uk">Wolfgang Merkt</maintainer>

  <author email="v.ivan@ed.ac.uk">Vladimir Ivan</author>
  <author email="wolfgang@robots.ox.ac.uk">Wolfgang Merkt</author>
  <author>Christian Rauch</author>
  <author>Christopher E. Mower</author>
  <author>Yiming Yang</author>
  <author>Michael Camilleri</author>

  <license>BSD</license>

  <url type="website">https://github.com/ipab-slmc/exotica</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>exotica_aico_solver</exec_depend>
  <exec_depend>exotica_collision_scene_fcl_latest</exec_depend>
  <exec_depend>exotica_core</exec_depend>
  <exec_depend>exotica_core_task_maps</exec_depend>
  <exec_depend>exotica_ik_solver</exec_depend>
  <exec_depend>exotica_levenberg_marquardt_solver</exec_depend>
  <exec_depend>exotica_ompl_solver</exec_depend>
  <exec_depend>exotica_python</exec_depend>
  <exec_depend>exotica_time_indexed_rrt_connect_solver</exec_depend>

  <doc_depend>rosdoc_lite</doc_depend>
  <doc_depend>doxygen</doc_depend>
  <doc_depend condition="$ROS_PYTHON_VERSION == 2">python-sphinx</doc_depend>
  <doc_depend condition="$ROS_PYTHON_VERSION == 2">python-sphinx-rtd-theme</doc_depend>
  <doc_depend condition="$ROS_PYTHON_VERSION == 3">python3-sphinx</doc_depend>
  <doc_depend condition="$ROS_PYTHON_VERSION == 3">python3-sphinx-rtd-theme</doc_depend>
  <!-- We use autodoc to document Python API. As such, we need to have the following packages available: -->
  <doc_depend>exotica_python</doc_depend>
  <doc_depend>exotica_ompl_solver</doc_depend>
  <doc_depend>exotica_core_task_maps</doc_depend>
  <doc_depend>exotica_ilqr_solver</doc_depend>
  <doc_depend>exotica_ddp_solver</doc_depend>
  <doc_depend>exotica_ilqg_solver</doc_depend>
  <doc_depend>exotica_examples</doc_depend><!-- TODO: This may pull in Rviz! -->

  <export>
    <metapackage/>
    <!-- rosdoc_lite c++ generation does not yet work-->
    <!-- <rosdoc config="rosdoc.yaml" /> -->
  </export>
</package>
