<?xml version="1.0"?>
<package format="2">
  <name>exotica_core</name>
  <version>5.1.3</version>
  <description>The Extensible Optimization Toolset (EXOTica) is a library for defining problems for robot motion planning.</description>

  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <maintainer email="wolfgang.merkt@ed.ac.uk">Wolfgang Merkt</maintainer>
  <author>Yiming Yang</author>
  <author>Michael Camilleri</author>

  <license>BSD</license>

  <url type="website">https://github.com/ipab-slmc/exotica</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_msgs</depend>
  <depend>tf</depend>
  <depend>kdl_parser</depend>
  <depend>pluginlib</depend>
  <depend>eigen_conversions</depend>
  <depend>tf_conversions</depend>
  <depend>tinyxml2</depend>
  <depend>msgpack</depend>
  <depend>libzmq3-dev</depend>

  <test_depend>rosunit</test_depend>
</package>
