<?xml version="1.0"?>
<package>
  <name>exotica_distro</name>
  <version>3.0.0</version>
  <description>This is a meta package that imports all main exotica packages</description>

  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <maintainer email="yiming.yang@ed.ac.uk">Yiming Yang</maintainer>
  <author email="mcamnadur@gmail.com">Michael Camilleri</author>

  <license>BSD</license>

  <url type="website">https://bitbucket.org/IPAB-SLMC/exotica</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>aico</build_depend>
  <build_depend>dmesh_ros</build_depend>
  <build_depend>exotica</build_depend>
  <build_depend>ik_solver</build_depend>
  <build_depend>ompl_solver</build_depend>
  <build_depend>task_map</build_depend>
  <run_depend>aico</run_depend>
  <run_depend>dmesh_ros</run_depend>
  <run_depend>exotica</run_depend>
  <run_depend>ik_solver</run_depend>
  <run_depend>ompl_solver</run_depend>
  <run_depend>task_map</run_depend>

</package>
